# glowstone

./: .gitignore  CLA.md  CONTRIBUTING.md  Cargo.toml  README.md  build.rs  skills-lock.json
.cargo/: config.toml
.claude/: wf-volumetric.js
.embedder/: bootstrap-context-infineon.enc  bootstrap-context-prod.enc  workspace-selection-infineon.json
.embedder/svd-cache/: index.json
assets/icons/: glowstone.icns
docs/: RESEARCH-blender-framework.md  RESEARCH-industry-patterns.md  RESEARCH-led-ndi.md  RESEARCH-pyro.md  RESEARCH-shadows.md  RESEARCH-ux.md  RESEARCH-volumetric-scaling.md  RESEARCH-volumetrics.md  SPECTRE-CREDITS.md
examples/: extract_glow_gdtf.rs  measure_gdtf_glb.rs
scripts/: gen-icons.sh  gen_icons.py  glowstone.nsi  package-all.sh  package-macos.sh  package-windows.sh  release.sh
src/: app.rs  gdtf.rs  main.rs  mvr.rs  render_job.rs  share.rs
src/citp/: client.rs  mod.rs  proto.rs
src/dmx/: address.rs  artnet.rs  decode.rs  feed.rs  mod.rs  net.rs  patch.rs  sacn.rs  universe.rs
src/ndi/: mod.rs
src/optics/: color.rs  mod.rs  motion.rs
src/renderer/: atlas.rs  camera.rs  fixture_model.rs  gpu_timer.rs  mesh.rs  mod.rs  noise.rs  particles.rs  pipeline.rs  shadow.rs  viewport.rs  world.rs
src/scene/: environment.rs  fixture.rs  library.rs  mod.rs  pyro.rs  render.rs  screen.rs
src/shaders/: froxel.wgsl  grid.wgsl  lens.wgsl  mask.wgsl  mesh.wgsl  optics.wgsl  particles.wgsl  post.wgsl  shadow.wgsl  sky.wgsl  ssao.wgsl  vol_temporal.wgsl  volumetric.wgsl  wall.wgsl
src/ui/: actions.rs  bookmarks.rs  chrome.rs  cues.rs  debug_hooks.rs  dock.rs  editor.rs  file_ops.rs  gizmo.rs  lib_prefs.rs  library.rs  mod.rs  nav_gizmo.rs  notify.rs  op.rs  ops.rs  outliner.rs  panels.rs  pie.rs  pies.rs  project.rs  render_panel.rs  setup.rs  share_window.rs  shortcuts.rs  splash.rs  theme.rs  tools.rs  tree.rs  viewport_math.rs  windows.rs  workspaces.rs  xform.rs
src/ui/inspector/: bulk.rs  environment.rs  fixture.rs  mod.rs  optics.rs  props.rs  pyro.rs  screen.rs  world.rs
src/ui/windows/: about.rs  add_menu.rs  mod.rs  operator_search.rs  patch_dialog.rs  perf_overlay.rs  preferences.rs  profile_editor.rs  quick_select.rs  shortcuts.rs  unpatch_dialog.rs
