[package]
name = "glowstone"
version = "0.1.0"
edition = "2024"
rust-version = "1.92"
description = "Open-source lighting previsualization for live events — real-time 3D stage and fixture preview"
license = "MIT OR Apache-2.0"
homepage = "https://glowstone.build"
repository = "https://github.com/your-org/glowstone"
readme = "README.md"
keywords = ["lighting", "previsualization", "dmx", "stage", "wgpu"]
categories = ["graphics", "rendering", "visualization"]

[dependencies]
winit = "0.30.13"
wgpu = "29.0"
egui = "0.34"
egui-wgpu = "0.34"
egui-winit = "0.34"
egui_dock = { version = "0.19", features = ["serde"] }
glam = { version = "0.33", features = ["bytemuck", "serde"] }
bytemuck = { version = "1.25", features = ["derive"] }
pollster = "0.4"
# f16 conversion for the HDR world/environment map (Rgba16Float is filterable;
# Rgba32Float is not without an optional device feature).
half = { version = "2", features = ["bytemuck"] }
env_logger = "0.11"
log = "0.4"
# Image decode/encode: headless screenshot PNG + GDTF wheel/thumbnail images +
# HDR (Radiance .hdr) + JPEG for world/environment HDRI maps.
image = { version = "0.25", default-features = false, features = ["png", "hdr", "jpeg", "exr"] }

# GDTF import (fixture library): GDTF is a ZIP of an XML description + glTF
# models + wheel images.
zip = { version = "8", default-features = false, features = ["deflate"] }
roxmltree = "0.21"
gltf = "1.4"
rfd = "0.17"

# DMX input sockets: SO_REUSEADDR / SO_REUSEPORT before bind, so the Art-Net
# (6454) and sACN (5568) receivers can coexist with a console (e.g. MagicQ) that
# already holds the port on the same machine. The Art-Net/sACN packets themselves
# are still hand-parsed (see src/dmx/); this is only for the socket options std
# can't set pre-bind.
socket2 = { version = "0.5", features = ["all"] }
egui-phosphor = "0.12.0"
# default-features off (drop the cookie jar) — we capture the GDTF Share session
# cookie from the login response and attach it explicitly on every request, which
# is robust against redirects / jar edge cases.
ureq = { version = "2", default-features = false, features = ["tls", "gzip", "json"] }
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1.0.150"
directories = "6.0.0"
# `.glow` project format: a SELF-DESCRIBING binary serde dump of the whole project
# state (scene + fixtures + bundled GDTF/model bytes + settings + patch + cues).
# MessagePack with named struct fields (`to_vec_named`) — fields are matched by NAME
# on load, so older saves open in newer builds (missing fields take their serde
# defaults) and unknown fields from newer saves are ignored. Binary, so the bundled
# GDTF/model/HDRI bytes stay compact (no base64 bloat).
rmp-serde = "1.3"
# Still used for the in-memory undo/redo snapshots (same-version, positional is fine
# and fast there) — NOT for the on-disk project format.
bincode = "1.3"

# NDI receive (optional): the NDI SDK is proprietary and NOT bundled — enabling
# the `ndi` feature links the user-installed NDI 6 runtime via grafton-ndi
# (building it requires the NDI SDK present). The default build compiles WITHOUT
# the SDK and uses a graceful no-op stub. See docs/RESEARCH-led-ndi.md.
grafton-ndi = { version = "1", optional = true }

[features]
# Off by default: a default `cargo build` needs no NDI SDK. `--features ndi`
# requires the NDI 6 SDK + Clang at build time and the runtime at run time.
ndi = ["dep:grafton-ndi"]

[build-dependencies]
# Embeds the Windows app icon (assets/icons/glowstone.ico) + version info into the
# .exe. Only does work when the TARGET is Windows (see build.rs) — a no-op for native
# macOS/Linux builds, though it is still compiled on the host as a build dependency.
winresource = "0.1"

# Faster, smoother dev: the wgpu/naga/egui stacks are slow in pure debug.
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
